[package]
name = "betterls"
description = "Replcment for the `ls` command"
license = "MIT"
version = "1.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
owo-colors = "4.2.1"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
tabled = "0.20.0"
regex = "1.11.1"